--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -1,7 +1,3 @@
 {
-  "extends": "../../tsconfig.shared.json",
-  "compilerOptions": {
-    "declaration": false,
-    "declarationMap": false
-  }
+  "extends": "../../tsconfig.shared.json"
 }
