--- a/tsconfig.shared.json
+++ b/tsconfig.shared.json
@@ -6,6 +6,7 @@
     "moduleResolution": "node",
     "removeComments": true,
     "strict": true,
+    "sourceMap": true,
     "target": "es2020",
     "typeRoots": ["./node_modules/@types"]
   }
