--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "extends": "../../tsconfig.shared.json"
+  "extends": "../../tsconfig.shared.json",
+  "compilerOptions": {
+    "declaration": false,
+    "declarationMap": false
+  }
 }
