--- a/packages/single-page-markdown-website/package.json
+++ b/packages/single-page-markdown-website/package.json
@@ -19,9 +19,8 @@
     "fix": "eslint --fix 'src/**/*.ts'",
     "lint": "eslint 'src/**/*.ts'",
     "prepublishOnly": "yarn run build",
-    "start": "yarn run clean && chokidar --command 'cd sandbox && ts-node ../src/cli.ts \"*.md\"' --initial --silent 'build/**/*' 'src/**/*.ts'",
     "test": "tap 'src/**/__tests__/**/*.ts' --coverage-report html --coverage-report text --jobs-auto --no-browser --reporter terse",
-    "watch": "chokidar --command 'yarn run build' --initial --silent 'build/**/*' 'src/**/*.ts'"
+    "watch": "yarn run clean && chokidar --command 'cd sandbox && ts-node ../src/cli.ts \"*.md\"' --initial --silent '../frontend/lib/**/*' 'src/**/*.ts'"
   },
   "dependencies": {
     "@single-page-markdown-website/frontend": "*",
@@ -36,6 +35,8 @@
     "rehype-highlight": "^4.0.0",
     "rehype-slug": "^4.0.1",
     "rehype-stringify": "^8.0.0",
+    "remark-emoji": "^2.1.0",
+    "remark-gfm": "^1.0.0",
     "remark-parse": "^9.0.0",
     "remark-rehype": "^8.0.0",
     "remark-stringify": "^9.0.0",
