--- a/package.json
+++ b/package.json
@@ -10,29 +10,30 @@
     "test": "lerna run test"
   },
   "devDependencies": {
-    "@types/fs-extra": "^9.0.4",
+    "@types/fs-extra": "^9.0.5",
     "@types/html-minifier": "^4.0.0",
-    "@types/node": "^14.14.10",
+    "@types/mustache": "^4.1.0",
+    "@types/node": "^14.14.12",
     "@types/tap": "^14.10.1",
     "@types/unist": "^2.0.3",
     "chokidar-cli": "^2.1.0",
     "concurrently": "^5.3.0",
-    "eslint": "^7.14.0",
+    "eslint": "^7.15.0",
     "eslint-config-yuanqing": "^0.0.4",
-    "husky": "^4.3.0",
+    "husky": "^4.3.5",
     "lerna": "^3.22.1",
-    "lint-staged": "^10.5.2",
+    "lint-staged": "^10.5.3",
     "mkdirp": "^1.0.4",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "sass": "^1.29.0",
+    "sass": "^1.30.0",
     "stylelint": "^13.8.0",
     "stylelint-config-yuanqing": "^0.0.1",
     "tap": "^14.11.0",
     "terser-webpack-plugin": "^5.0.3",
-    "ts-loader": "^8.0.11",
-    "typescript": "^4.1.2",
-    "webpack": "^5.9.0",
+    "ts-loader": "^8.0.12",
+    "typescript": "^4.1.3",
+    "webpack": "^5.10.1",
     "webpack-cli": "^4.2.0"
   },
   "eslintConfig": {
