--- a/packages/single-page-markdown-website/package.json
+++ b/packages/single-page-markdown-website/package.json
@@ -31,6 +31,7 @@
     "globby": "^11.0.1",
     "html-minifier": "^4.0.0",
     "mdast-util-toc": "^5.1.0",
+    "mustache": "^4.1.0",
     "rehype-autolink-headings": "^5.0.1",
     "rehype-highlight": "^4.0.0",
     "rehype-slug": "^4.0.1",
@@ -39,7 +40,7 @@
     "remark-gfm": "^1.0.0",
     "remark-parse": "^9.0.0",
     "remark-rehype": "^8.0.0",
-    "remark-stringify": "^9.0.0",
+    "remark-stringify": "^9.0.1",
     "remark-strip-badges": "^5.0.0",
     "unified": "^9.2.0",
     "vfile": "^4.2.1"
