--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.5",
     "@types/html-minifier": "^4.0.0",
-    "@types/mustache": "^4.1.0",
+    "@types/lodash.template": "^4.5.0",
     "@types/node": "^14.14.12",
     "@types/tap": "^14.10.1",
     "@types/unist": "^2.0.3",
