--- a/packages/single-page-markdown-website/package.json
+++ b/packages/single-page-markdown-website/package.json
@@ -26,12 +26,14 @@
   "dependencies": {
     "@single-page-markdown-website/frontend": "*",
     "@yuanqing/cli": "^0.0.7",
+    "chokidar": "^3.4.3",
     "find-up": "^5.0.0",
     "fs-extra": "^9.0.1",
     "globby": "^11.0.1",
     "html-minifier": "^4.0.0",
+    "kleur": "^4.1.3",
+    "lodash.template": "^4.5.0",
     "mdast-util-toc": "^5.1.0",
-    "mustache": "^4.1.0",
     "rehype-autolink-headings": "^5.0.1",
     "rehype-highlight": "^4.0.0",
     "rehype-slug": "^4.0.1",
