--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.5",
     "@types/html-minifier": "^4.0.0",
+    "@types/is-url": "^1.2.28",
     "@types/lodash.template": "^4.5.0",
     "@types/node": "^14.14.12",
     "@types/tap": "^14.10.1",
