--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "fix": "lerna run --parallel fix",
     "lint": "lerna run --parallel lint",
     "postinstall": "yarn run build",
+    "publish": "yarn run build && lerna publish from-package",
     "reset": "yarn run clean && lerna clean --yes && rimraf node_modules yarn.lock && yarn install",
-    "test": "lerna run test"
+    "test": "lerna run test",
+    "version": "lerna version"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.5",
