--- a/packages/single-page-markdown-website/package.json
+++ b/packages/single-page-markdown-website/package.json
@@ -26,7 +26,7 @@
     "clean": "rimraf '*.log' .nyc_output coverage lib",
     "fix": "eslint --fix 'src/**/*.ts'",
     "lint": "eslint 'src/**/*.ts'",
-    "prepublishOnly": "yarn run build",
+    "prepublishOnly": "yarn run build && cp ../../README.md README.md",
     "start": "cd sandbox && ts-node ../src/cli.ts docs/index.md",
     "test": "tap 'src/**/__tests__/**/*.ts' --coverage-report html --coverage-report text --jobs-auto --no-browser --reporter terse",
     "watch": "yarn run clean && chokidar --command 'yarn start' --initial --silent '../frontend/lib/**/*' 'src/**/*.ts'"
@@ -44,6 +44,7 @@
     "lodash.template": "^4.5.0",
     "mdast-util-from-markdown": "^0.8.4",
     "mdast-util-toc": "^5.1.0",
+    "open": "^7.3.0",
     "rehype-autolink-headings": "^5.0.1",
     "rehype-highlight": "^4.0.0",
     "rehype-slug": "^4.0.1",
