Add `version` config

--- a/lerna.json
+++ b/lerna.json
@@ -8,6 +8,10 @@
   "command": {
     "bootstrap": {
       "forceLocal": true
+    },
+    "version": {
+      "message": "%v",
+      "push": false
     }
   }
 }
