Add logo + edit README.md + add `website` scripts

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "homepage": "https://github.com/yuanqing/single-page-markdown-website",
   "scripts": {
     "build": "lerna run build --scope @single-page-markdown-website/frontend && lerna run build --scope single-page-markdown-website",
-    "clean": "lerna run --parallel clean && rimraf '*.log'",
+    "clean": "lerna run --parallel clean && yarn run website-clean && rimraf '*.log'",
     "docs": "markdown-interpolate README.md",
     "fix": "lerna run --parallel fix",
     "lint": "lerna run --parallel lint",
@@ -11,7 +11,10 @@
     "publish": "lerna publish from-package",
     "reset": "yarn run clean && lerna clean --yes && rimraf node_modules yarn.lock && yarn install",
     "test": "lerna run test",
-    "version": "lerna version"
+    "version": "lerna version",
+    "website-build": "yarn run website-clean && yarn run docs && ts-node --project tsconfig.shared.json packages/single-page-markdown-website/src/cli.ts README.md",
+    "website-clean": "rimraf build",
+    "website-deploy": "yarn run website-build && gh-pages --dist build"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.5",
@@ -23,8 +26,10 @@
     "@types/unist": "^2.0.3",
     "chokidar-cli": "^2.1.0",
     "concurrently": "^5.3.0",
+    "cpy-cli": "^3.1.1",
     "eslint": "^7.15.0",
     "eslint-config-yuanqing": "^0.0.4",
+    "gh-pages": "^3.1.0",
     "husky": "^4.3.6",
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.3",
