--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "reset": "yarn run clean && lerna clean --yes && rimraf node_modules yarn.lock && yarn install",
     "test": "lerna run test",
     "version": "lerna version",
-    "website-build": "yarn run website-clean && yarn run docs && ts-node --project tsconfig.shared.json packages/single-page-markdown-website/src/cli.ts README.md",
+    "website-build": "yarn run website-clean && yarn run build && yarn run docs && ts-node --project tsconfig.shared.json packages/single-page-markdown-website/src/cli.ts README.md",
     "website-clean": "rimraf build",
     "website-deploy": "yarn run website-build && gh-pages --dist build",
-    "website-watch": "chokidar --command 'yarn run website-build' --initial --silent 'packages/*/lib/**/*'"
+    "website-watch": "chokidar --command 'ts-node --project tsconfig.shared.json packages/single-page-markdown-website/src/cli.ts README.md' --initial --silent 'packages/*/src/**/*'"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.5",
