--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "docs": "markdown-interpolate README.md",
     "fix": "lerna run --parallel fix",
     "lint": "lerna run --parallel lint",
-    "postinstall": "yarn run build",
+    "postinstall": "simple-git-hooks && yarn run build",
     "publish": "lerna publish from-package",
     "reset": "yarn run clean && lerna clean --yes && rimraf node_modules yarn.lock && yarn install",
     "test": "lerna run test",
@@ -17,42 +17,17 @@
     "website-watch": "chokidar --command 'ts-node --project tsconfig.shared.json packages/single-page-markdown-website/src/cli.ts README.md' --initial --silent 'packages/*/src/**/*'"
   },
   "devDependencies": {
-    "@types/fs-extra": "^9.0.5",
-    "@types/html-minifier": "^4.0.0",
-    "@types/lodash.template": "^4.5.0",
-    "@types/node": "^14.14.14",
-    "@types/tap": "^14.10.1",
-    "@types/unist": "^2.0.3",
     "chokidar-cli": "^2.1.0",
-    "concurrently": "^5.3.0",
-    "cpy-cli": "^3.1.1",
-    "eslint": "^7.15.0",
-    "eslint-config-yuanqing": "^0.0.4",
     "gh-pages": "^3.1.0",
-    "husky": "^4.3.6",
-    "lerna": "^3.22.1",
-    "lint-staged": "^10.5.3",
+    "lerna": "^4.0.0",
+    "lint-staged": "^10.5.4",
     "markdown-interpolate": "^0.0.7",
-    "mkdirp": "^1.0.4",
-    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "sass": "^1.30.0",
-    "stylelint": "^13.8.0",
-    "stylelint-config-yuanqing": "^0.0.1",
-    "tap": "^14.11.0",
-    "terser-webpack-plugin": "^5.0.3",
-    "ts-loader": "^8.0.12",
-    "typescript": "^4.1.3",
-    "webpack": "^5.11.0",
-    "webpack-cli": "^4.2.0"
+    "simple-git-hooks": "^2.3.1",
+    "ts-node": "^9.1.1"
   },
   "eslintConfig": {
     "extends": "eslint-config-yuanqing"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.ts": [
@@ -63,6 +38,9 @@
     ]
   },
   "prettier": "eslint-config-yuanqing/prettier",
+  "simple-git-hooks": {
+    "pre-commit": "yarn run lint-staged"
+  },
   "single-page-markdown-website": {
     "baseUrl": "https://yuanqing.github.io/single-page-markdown-website/",
     "title": "Single-Page Markdown Website",
