--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "build": "yarn run clean && concurrently --raw 'yarn run build-html' 'yarn run build-scss' 'yarn run build-ts'",
-    "build-html": "mkdirp lib && cp src/html/index.html lib",
+    "build-html": "mkdirp lib && cpy src/html/index.html lib",
     "build-scss": "sass --load-path ../../node_modules --no-source-map --stop-on-error --style compressed src/scss/style.scss lib/style.css",
     "build-ts": "webpack --mode production",
     "clean": "rimraf '*.log' lib",
@@ -32,5 +32,24 @@
     "watch-html": "chokidar --command 'yarn run build-html' --initial --silent 'src/html/**/*.html'",
     "watch-scss": "chokidar --command 'yarn run build-scss' --initial --silent 'src/scss/**/*.scss'",
     "watch-ts": "chokidar --command 'webpack --mode development' --initial --silent 'src/ts/**/*.ts'"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.37",
+    "chokidar-cli": "^2.1.0",
+    "concurrently": "^6.0.1",
+    "cpy-cli": "^3.1.1",
+    "eslint": "^7.24.0",
+    "eslint-config-yuanqing": "^0.0.4",
+    "mkdirp": "^1.0.4",
+    "prettier": "^2.2.1",
+    "sass": "^1.32.8",
+    "stylelint": "^13.12.0",
+    "stylelint-config-yuanqing": "^0.0.1",
+    "rimraf": "^3.0.2",
+    "terser-webpack-plugin": "^5.1.1",
+    "ts-loader": "^8.1.0",
+    "typescript": "^4.2.4",
+    "webpack": "^5.31.2",
+    "webpack-cli": "^4.6.0"
   }
 }
