--- a/packages/single-page-markdown-website/package.json
+++ b/packages/single-page-markdown-website/package.json
@@ -31,34 +31,48 @@
     "lint": "eslint 'src/**/*.ts'",
     "prepublishOnly": "yarn run build && cpy ../../README.md ./",
     "start": "cd sandbox && ts-node ../src/cli.ts docs/index.md",
-    "test": "tap 'src/**/__tests__/**/*.ts' --coverage-report html --coverage-report text --jobs-auto --no-browser --reporter terse",
     "watch": "yarn run clean && chokidar --command 'yarn start' --initial --silent '../frontend/lib/**/*' 'src/**/*.ts'"
   },
   "dependencies": {
     "@single-page-markdown-website/frontend": "^0.0.10",
     "@yuanqing/cli": "^0.0.9",
-    "chokidar": "^3.4.3",
-    "fs-extra": "^9.0.1",
-    "globby": "^11.0.1",
+    "chokidar": "^3.5.1",
+    "fs-extra": "^9.1.0",
+    "globby": "^11.0.3",
     "html-minifier": "^4.0.0",
     "is-url": "^1.2.4",
-    "kleur": "^4.1.3",
+    "kleur": "^4.1.4",
     "lodash.template": "^4.5.0",
-    "mdast-util-from-markdown": "^0.8.4",
+    "mdast-util-from-markdown": "^0.8.5",
     "mdast-util-toc": "^5.1.0",
-    "open": "^7.3.0",
+    "open": "^8.0.5",
     "rehype-autolink-headings": "^5.0.1",
-    "rehype-highlight": "^4.0.0",
+    "rehype-highlight": "^4.1.0",
     "rehype-slug": "^4.0.1",
     "rehype-stringify": "^8.0.0",
-    "remark-emoji": "^2.1.0",
+    "remark-emoji": "^2.2.0",
     "remark-gfm": "^1.0.0",
     "remark-parse": "^9.0.0",
     "remark-rehype": "^8.0.0",
     "remark-stringify": "^9.0.1",
     "remark-strip-badges": "^5.0.0",
-    "unified": "^9.2.0",
+    "unified": "^9.2.1",
     "unist-util-visit": "^2.0.3",
     "vfile": "^4.2.1"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^9.0.10",
+    "@types/html-minifier": "^4.0.0",
+    "@types/lodash.template": "^4.5.0",
+    "@types/node": "^14.14.37",
+    "@types/unist": "^2.0.3",
+    "chokidar-cli": "^2.1.0",
+    "cpy-cli": "^3.1.1",
+    "eslint": "^7.24.0",
+    "eslint-config-yuanqing": "^0.0.4",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   }
 }
