--- a/packages/single-page-markdown-website/package.json
+++ b/packages/single-page-markdown-website/package.json
@@ -29,7 +29,7 @@
     "clean": "rm -rf '*.log' .nyc_output coverage lib",
     "fix": "eslint --fix 'src/**/*.ts'",
     "lint": "eslint 'src/**/*.ts'",
-    "prepublishOnly": "yarn run build && cpy ../../README.md ./",
+    "prepublishOnly": "yarn run build && cp ../../README.md ./",
     "start": "cd sandbox && ts-node ../src/cli.ts docs/index.md",
     "watch": "yarn run clean && chokidar --command 'yarn start' --initial --silent '../frontend/lib/**/*' 'src/**/*.ts'"
   },
@@ -67,7 +67,6 @@
     "@types/node": "^14.14.41",
     "@types/unist": "^2.0.3",
     "chokidar-cli": "^2.1.0",
-    "cpy-cli": "^3.1.1",
     "eslint": "^7.24.0",
     "eslint-config-yuanqing": "^0.0.4",
     "prettier": "^2.2.1",
