--- a/packages/single-page-markdown-website/package.json
+++ b/packages/single-page-markdown-website/package.json
@@ -18,6 +18,7 @@
     "url": "git://github.com/yuanqing/single-page-markdown-website.git",
     "directory": "packages/single-page-markdown-website"
   },
+  "type": "module",
   "files": [
     "lib"
   ],
@@ -36,16 +37,17 @@
     "@single-page-markdown-website/frontend": "^0.0.14",
     "@yuanqing/cli": "^0.0.9",
     "chokidar": "^3.5.1",
-    "fs-extra": "^9.1.0",
+    "find-up": "^5.0.0",
+    "fs-extra": "^10.0.0",
     "globby": "^11.0.3",
     "html-minifier": "^4.0.0",
     "is-url": "^1.2.4",
     "kleur": "^4.1.4",
     "lodash.template": "^4.5.0",
     "mdast-util-from-markdown": "^0.8.5",
-    "mdast-util-toc": "^5.1.0",
-    "open": "^8.0.6",
-    "rehype-autolink-headings": "^5.0.1",
+    "mdast-util-toc": "^6.0.0",
+    "open": "^8.0.8",
+    "rehype-autolink-headings": "4.0.0",
     "rehype-highlight": "^4.1.0",
     "rehype-slug": "^4.0.1",
     "rehype-stringify": "^8.0.0",
@@ -56,18 +58,18 @@
     "remark-stringify": "^9.0.1",
     "remark-strip-badges": "^5.0.0",
     "unified": "^9.2.1",
-    "unist-util-visit": "^2.0.3",
-    "vfile": "^4.2.1"
+    "unist-util-visit": "^3.0.1",
+    "vfile": "4.2.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.11",
     "@types/html-minifier": "^4.0.0",
     "@types/lodash.template": "^4.5.0",
-    "@types/node": "^14.14.41",
+    "@types/node": "^15.0.2",
     "@types/unist": "^2.0.3",
     "chokidar-cli": "^2.1.0",
-    "eslint": "^7.24.0",
-    "eslint-config-yuanqing": "^0.0.4",
+    "eslint": "^7.26.0",
+    "eslint-config-yuanqing": "^0.0.5",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
