--- a/tsconfig.shared.json
+++ b/tsconfig.shared.json
@@ -2,12 +2,13 @@
   "compilerOptions": {
     "declaration": true,
     "declarationMap": true,
-    "module": "commonjs",
+    "esModuleInterop": true,
+    "module": "ES2020",
     "moduleResolution": "node",
     "removeComments": true,
     "strict": true,
     "sourceMap": true,
-    "target": "es2020",
+    "target": "ES2020",
     "typeRoots": ["./node_modules/@types"]
   }
 }
