--- a/packages/single-page-markdown-website/package.json
+++ b/packages/single-page-markdown-website/package.json
@@ -19,6 +19,9 @@
     "directory": "packages/single-page-markdown-website"
   },
   "type": "module",
+  "engines": {
+    "node": ">=12.20"
+  },
   "files": [
     "lib"
   ],
@@ -27,11 +30,11 @@
   },
   "scripts": {
     "build": "yarn run clean && tsc",
-    "clean": "rm -rf '*.log' .nyc_output coverage lib",
-    "fix": "eslint --fix 'src/**/*.ts'",
-    "lint": "eslint 'src/**/*.ts'",
+    "clean": "rm -rf './*.log' ./lib",
+    "fix": "eslint --fix './src/**/*.ts'",
+    "lint": "eslint './src/**/*.ts'",
     "prepublishOnly": "yarn run build && cp ../../README.md ./",
-    "watch": "yarn run clean && chokidar --command 'cd ../.. && ts-node --project tsconfig.shared.json packages/single-page-markdown-website/src/cli.ts README.md' --initial --silent '../../package.json' '../../README.md' '../frontend/lib/**/*' '../../media/**/*' 'src/**/*.ts'"
+    "watch": "yarn run clean && chokidar --command 'cd ../.. && TS_NODE_PROJECT=./packages/single-page-markdown-website/tsconfig.json node --loader ts-node/esm -- ./packages/single-page-markdown-website/src/cli.ts ./README.md' --initial --silent ../../package.json ../../README.md '../../media/**/*' '../frontend/lib/**/*' './src/**/*.ts'"
   },
   "dependencies": {
     "@single-page-markdown-website/frontend": "^0.0.15",
@@ -58,19 +61,19 @@
     "remark-stringify": "^9.0.1",
     "remark-strip-badges": "^5.0.0",
     "unified": "^9.2.1",
-    "unist-util-visit": "^3.0.1",
+    "unist-util-visit": "^3.1.0",
     "vfile": "4.2.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.11",
     "@types/html-minifier": "^4.0.0",
     "@types/lodash.template": "^4.5.0",
-    "@types/node": "^15.0.2",
+    "@types/node": "^15.0.3",
     "@types/unist": "^2.0.3",
     "chokidar-cli": "^2.1.0",
     "eslint": "^7.26.0",
     "eslint-config-yuanqing": "^0.0.5",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
