--- a/tsconfig.shared.json
+++ b/tsconfig.shared.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
-    "declaration": true,
-    "declarationMap": true,
     "esModuleInterop": true,
     "module": "ES2020",
     "moduleResolution": "Node",
     "removeComments": true,
+    "sourceMap": true,
     "strict": true,
     "target": "ES2020",
-    "typeRoots": ["./node_modules/@types"]
+    "types": ["@types/node"]
   }
 }
