--- a/packages/single-page-markdown-website/tsconfig.json
+++ b/packages/single-page-markdown-website/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "declaration": true,
     "declarationMap": true,
+    "lib": ["ES2020"],
     "outDir": "./lib",
     "paths": {
       "is-url": ["./src/types/untyped-dependencies.d.ts"],
