--- a/packages/single-page-markdown-website/package.json
+++ b/packages/single-page-markdown-website/package.json
@@ -23,10 +23,10 @@
     "node": ">=12.20"
   },
   "files": [
-    "lib"
+    "./lib"
   ],
   "bin": {
-    "single-page-markdown-website": "lib/cli.js"
+    "single-page-markdown-website": "./lib/cli.js"
   },
   "scripts": {
     "build": "yarn run clean && tsc --build",
