--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "type": "module",
   "scripts": {
     "build": "lerna run build --scope @single-page-markdown-website/frontend && lerna run build --scope single-page-markdown-website",
-    "clean": "lerna run --parallel --stream clean && yarn run website-clean && rm -rf './*.log'",
-    "docs": "markdown-interpolate ./README.md",
+    "clean": "lerna run --parallel --stream clean && yarn run website-clean && rm -rf '*.log'",
+    "docs": "markdown-interpolate README.md",
     "fix": "lerna run --parallel --stream fix",
     "lint": "lerna run --parallel --stream lint",
     "postinstall": "simple-git-hooks && yarn run build",
     "publish": "lerna publish from-package",
-    "reset": "yarn run clean && lerna clean --yes && rm -rf ./node_modules ./yarn.lock && yarn install",
+    "reset": "yarn run clean && lerna clean --yes && rm -rf node_modules yarn.lock && yarn install",
     "test": "lerna run test",
     "version": "lerna version",
-    "website-build": "yarn run website-clean && yarn run build && yarn run docs && node ./packages/single-page-markdown-website/lib/cli.js ./README.md",
-    "website-clean": "rm -rf ./build"
+    "website-build": "yarn run website-clean && yarn run build && yarn run docs && node packages/single-page-markdown-website/lib/cli.js README.md",
+    "website-clean": "rm -rf build"
   },
   "devDependencies": {
     "chokidar-cli": "^2.1.0",
