--- a/packages/single-page-markdown-website/tsconfig.json
+++ b/packages/single-page-markdown-website/tsconfig.json
@@ -4,14 +4,14 @@
     "declaration": true,
     "declarationMap": true,
     "lib": ["ES2020"],
-    "outDir": "./lib",
+    "outDir": "lib",
     "paths": {
       "is-url": ["./src/types/untyped-dependencies.d.ts"],
       "rehype-autolink-headings": ["./src/types/untyped-dependencies.d.ts"],
       "rehype-highlight": ["./src/types/untyped-dependencies.d.ts"],
       "remark-strip-badges": ["./src/types/untyped-dependencies.d.ts"]
     },
-    "rootDir": "./src"
+    "rootDir": "src"
   },
-  "include": ["./src/**/*.ts"]
+  "include": ["src/**/*.ts"]
 }
