--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,11 +15,9 @@ jobs:
       - run: yarn run fix
       - run: yarn run build
       - run: yarn run website-build
-      - uses: JamesIves/github-pages-deploy-action@4.1.1
+      - uses: JamesIves/github-pages-deploy-action@4.1.3
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: build
-          GIT_CONFIG_NAME: github-actions[bot]
-          GIT_CONFIG_EMAIL: github-actions[bot]@users.noreply.github.com
+          branch: gh-pages
+          folder: build
+          git-config-name	: github-actions[bot]
+          git-config-email: github-actions[bot]@users.noreply.github.com
